[package]
name = "gnt2influx"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
influxdb = "0.7"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
csv = "1.3"
log = "0.4"
env_logger = "0.10"
toml = "0.8"
quick-xml = "0.36"
